@@ -39,6 +39,7 @@ gsl_matrix * create_moler_matrix(unsigned long size);
 gsl_matrix * create_row_matrix(unsigned long size1, unsigned long size2);
 gsl_matrix * create_2x2_matrix(double a11, double a12, double a21, double a22);
 gsl_matrix * create_diagonal_matrix(double a[], unsigned long size);
+gsl_matrix * create_sparse_matrix(unsigned long m, unsigned long n);
 
 int test_matmult(void);
 int test_matmult_mod(void);
@@ -271,6 +272,43 @@ create_diagonal_matrix(double a[], unsigned long size)
   return m;
 }
 
+double rand_double() {
+  static unsigned int x;
+  x = (69069 * x + 1) & 0xFFFFFFFFUL;
+  return (x  / 4294967296.0);
+}
+
+gsl_matrix *
+create_sparse_matrix(unsigned long m, unsigned long n) {
+  gsl_matrix* A = gsl_matrix_calloc(m, n);
+  
+  unsigned long int i, j;
+
+  for (i = 0; i < m; i++) {
+    for (j = 0; j < n; j++) {
+      double a = (rand_double() < 0.6 ? 1 : 0);
+      gsl_matrix_set(A, i, j, a);
+    }
+  }
+
+  for (i = 0; i < m; i++) {
+    if (rand_double() < 0.9) {
+      gsl_vector_view row = gsl_matrix_row (A, i);
+      gsl_vector_set_zero (&row.vector);
+    }
+  }
+  for (i = 0; i < n; i++) {
+    if (rand_double() < 0.43) {
+      gsl_vector_view col = gsl_matrix_column (A, i);
+      gsl_vector_set_zero (&col.vector);
+    }
+  }
+
+  return A;
+}
+
+
+
 gsl_matrix * m11;
 gsl_matrix * m51;
 
@@ -299,7 +337,8 @@ gsl_matrix_complex * c7;
 
 gsl_matrix * inf5; double inf5_data[] = {1.0, 0.0, -3.0, 0.0, -5.0};
 gsl_matrix * nan5;
-gsl_matrix * dblmin3, * dblmin5;
+gsl_matrix * dblmin3, * dblmin5, * dblsubnorm5;
+gsl_matrix * bigsparse;
 
 double m53_lssolution[] = {52.5992295702070, -337.7263113752073, 
                            351.8823436427604};
@@ -2364,6 +2403,7 @@ test_SV_decomp_dim(const gsl_matrix * m, double eps)
   int s = 0;
   double di1;
   unsigned long i,j, M = m->size1, N = m->size2;
+  unsigned long input_nans = 0;
 
   gsl_matrix * v  = gsl_matrix_alloc(M,N);
   gsl_matrix * a  = gsl_matrix_alloc(M,N);
@@ -2374,7 +2414,17 @@ test_SV_decomp_dim(const gsl_matrix * m, double eps)
 
   gsl_matrix_memcpy(v,m);
 
-  s += gsl_linalg_SV_decomp(v, q, d, w); 
+  /* Check for nans in the input */
+  for (i = 0; i<M; i++) {
+    for (j = 0; j<N; j++) {
+      double m_ij = gsl_matrix_get (m, i, j);
+      if (gsl_isnan (m_ij)) input_nans++;
+    }
+  }
+
+  s = gsl_linalg_SV_decomp(v, q, d, w); 
+
+  if (s) printf("returned error code %d = %s\n", s, gsl_strerror(s));
 
   /* Check that singular values are non-negative and in non-decreasing
      order */
@@ -2387,7 +2437,13 @@ test_SV_decomp_dim(const gsl_matrix * m, double eps)
 
       if (gsl_isnan (di))
         {
-          continue;  /* skip NaNs */
+          if (input_nans > 0) 
+            continue;  /* skip NaNs if present in input */
+          else
+            {
+              s++;
+              printf("bad singular value %lu = %22.18g\n", i, di);
+            }
         }
 
       if (di < 0) {
@@ -2525,6 +2581,14 @@ int test_SV_decomp(void)
 
   f = test_SV_decomp_dim(dblmin5, 1024 * GSL_DBL_EPSILON);
   gsl_test(f, "  SV_decomp dblmin5");
+  s += f;
+
+  f = test_SV_decomp_dim(dblsubnorm5, 100 * 1024 * 1024 * GSL_DBL_EPSILON);
+  gsl_test(f, "  SV_decomp dblsubnorm5");
+  s += f;
+
+  f = test_SV_decomp_dim(bigsparse, 1024 * GSL_DBL_EPSILON);
+  gsl_test(f, "  SV_decomp bigsparse");
   s += f;
 
 
@@ -4068,7 +4132,7 @@ int test_bidiag_decomp(void)
 void
 my_error_handler (const char *reason, const char *file, int line, int err)
 {
-  if (0) printf ("(caught [%s:%d: %s (%d)])\n", file, line, reason, err) ;
+  if (1) printf ("(caught [%s:%d: %s (%d)])\n", file, line, reason, err) ;
 }
 
 int main(void)
@@ -4120,6 +4184,12 @@ int main(void)
 
   dblmin5 = create_general_matrix (5, 5);
   gsl_matrix_scale(dblmin5, GSL_DBL_MIN);
+
+  dblsubnorm5 = create_general_matrix (5, 5);
+  gsl_matrix_scale(dblsubnorm5, GSL_DBL_MIN/1024);
+  gsl_matrix_set(dblsubnorm5, 0, 0, 0.0);
+
+  bigsparse = create_sparse_matrix(100, 100);
 
   /* Matmult now obsolete */
 #ifdef MATMULT
@@ -4199,6 +4269,9 @@ int main(void)
 
   gsl_matrix_free (dblmin3);
   gsl_matrix_free (dblmin5);
+  gsl_matrix_free (dblsubnorm5);
+
+  gsl_matrix_free (bigsparse);
 
   exit (gsl_test_summary());
 }
