@@ -1,3 +1,14 @@
+2010-02-24  Brian Gough  <bjg@network-theory.co.uk>
+
+	* svdstep.c (trailing_eigenvalue): compute the implicit shift
+	value mu robustly
+
+	* svd.c (gsl_linalg_SV_decomp): scale the bidiagonal matrix before
+	the implicit QR step
+
+	* householder.c (gsl_linalg_householder_transform): handle the
+	case where the scaling factor is subnormal
+
 2009-07-04  Brian Gough  <bjg@network-theory.co.uk>
 
 	* luc.c (gsl_linalg_complex_LU_solve, gsl_linalg_complex_LU_svx,
